[metadata]
summary = Enterprise Switching CATALYST Series-2
author = Byron Borel
author-email = bborel@cisco.com
license = Cisco System Inc. Proprietary
home-page = https://apollohub.cisco.com/bitbucket/scm/entsw/cat2.git
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 2.7
keywords=entsw, setuptools, development

[install]
install-data=/opt/cisco/te/scripts/$base_dir/entsw/cat2
