[metadata]
summary = Enterprise Switching C6K Product
author = Byron Borel
author-email = bborel@cisco.com
license = Cisco System Inc. Proprietary
home-page = http://bitbucket
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 2.7
keywords=entsw, setuptools, development

[install]
install-data=/opt/cisco/te/scripts/$base_dir/entsw/
